plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.qrfood'
version = '0.0.1-SNAPSHOT'
description = 'QR Menu Backend Project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// 🌐 Web / REST API
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// 🗄 JPA / Hibernate
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// 🔐 Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// 🐘 PostgreSQL Driver  ← CHANGED
	runtimeOnly 'org.postgresql:postgresql'

	// 🧰 Lombok (Optional but useful)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// 🧪 Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}